Fix upload box alignement

--- a/assets/css/components/UploadFile.scss
+++ b/assets/css/components/UploadFile.scss
@@ -14,7 +14,7 @@
 .versionSelect--uploadFile{
   border-top: 1px solid #e9e9e9;
   padding-top: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.8rem;
 }
 
 // Button 'browse' after loading and 'replace' after loading
